--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ a{
 }
 
 div#offcanvasNavbar-expand-lg {
-  background-color: var(--theme-color);
+  background-color: #082A71;
 }
 
 .offcanvas-header {
