--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,20 @@ a{
 }
 
 
+/* sweet Alert Box Styling  */
+
+body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
+  padding: 0px !important;
+}
+
+body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
+  overflow-y: scroll;
+}
+
+button.swal2-confirm.swal2-styled {
+  background: var(--theme-color);
+}
+
 /* ******************* Top Bar Styling Start *************** */
 
 .top-navbar {
