--- a/src/index.css
+++ b/src/index.css
@@ -472,7 +472,7 @@ section.map-sec {
  /* ***************************** Ride Info Page Styling ********************** */
 
  .container.ride-info-page {
-  padding: 150px 0 !important;
+  padding: 150px 0 100px 0 !important;
 }
 
 
