--- a/src/Screens/Chatroom/Chatroom.css
+++ b/src/Screens/Chatroom/Chatroom.css
@@ -59,14 +59,12 @@ ul.list-unstyled.messages-sec::-webkit-scrollbar-thumb:hover {
     color: white;
     background: linear-gradient(#000000b4, #000000bd 50%, #000000bd 0, #000000d6);
     border-radius: 9px;
-    box-shadow: 3px 5px 6px rgba(0, 0, 0, 0.219);
   }
 
   .bg-dark-blue {
     color: white;
     background: linear-gradient(#015fda, #0051bb 50%, #0252bb 0, #004AAD);
     border-radius: 9px;
-    box-shadow: 3px 5px 6px rgba(0, 0, 0, 0.219);
 }
 
   .no-chat-heading{
@@ -75,3 +73,11 @@ ul.list-unstyled.messages-sec::-webkit-scrollbar-thumb:hover {
     justify-content: center;
     align-items: center;
   }
+
+  .chat-header {
+    background: #073788;
+    padding: 8px 40px 8px 7px;
+    border-radius: 33px;
+    margin-bottom: 15px;
+    color: white;
+}
