--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   padding-right: 0 !important;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -398,7 +398,8 @@ section.map-sec {
 .about-content {
   padding: 80px 0 30px 0;
 }
-.about-content p{
+
+.about-content p {
   font-size: 17px;
   line-height: 30px;
 }
@@ -469,9 +470,9 @@ section.map-sec {
 }
 
 
- /* ***************************** Ride Info Page Styling ********************** */
+/* ***************************** Ride Info Page Styling ********************** */
 
- .container.ride-info-page {
+.container.ride-info-page {
   padding: 150px 0 100px 0 !important;
 }
 
@@ -483,7 +484,7 @@ section.map-sec {
 }
 
 .modal-form .input-field .form-control:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 
@@ -501,3 +502,99 @@ section.map-sec {
 .bottom-footer {
   background: #030226;
 }
+
+
+
+
+
+
+
+/* ************************************************************************************** */
+/* ************************************************************************************** */
+/* ********************* Responsive Styling Start *********************************** */
+/* ************************************************************************************** */
+/* ************************************************************************************** */
+
+
+
+
+@media screen and (max-width: 1680px) {}
+
+@media screen and (max-width: 1600px) {}
+
+@media screen and (max-width: 1440px) {}
+
+@media screen and (max-width: 1366px) {}
+
+@media screen and (max-width: 1280px) {}
+
+@media screen and (max-width: 1024px) {
+  section.hero-section {
+    padding: 18% 0px 20% 0px;
+  }
+
+  section.about-sec .abt-txt p {
+    font-size: 15px;
+    padding: 0 !important;
+    line-height: 22px;
+  }
+
+  .abt-icon {
+    width: 60px;
+    height: 60px;
+  }
+
+  .abt-icon i {
+    font-size: 30px;
+  }
+
+  section.about-sec h5 {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  section.hero-info .row .col-lg-4 {
+    margin-bottom: 35px;
+  }
+}
+
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 690px) {
+  section.hero-section {
+    padding: 23% 0px 25% 0px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  section.hero-section {
+    padding: 32% 0px 40% 0px;
+  }
+
+  .hero-section .container .row h1 {
+    font-size: 44px !important;
+  }
+
+  .hero-section .container .row p {
+    font-size: 15px !important;
+    line-height: 26px;
+  }
+
+  section.about-sec .abt-txt p {
+    line-height: 22px;
+  }
+  section.about-sec h5 {
+    font-size: 19px;
+}
+section.about-sec .container {
+  padding-right: 20px;
+  padding-left: 30px;
+}
+}
+
+@media screen and (max-width: 414px) {}
+
+@media screen and (max-width: 375px) {}
+
+@media screen and (max-width: 360px) {}
