--- a/src/index.css
+++ b/src/index.css
@@ -396,7 +396,7 @@ section.map-sec {
 }
 
 .about-content {
-  padding: 80px 0 30px 0;
+  padding: 80px 0 80px 0;
 }
 
 .about-content p {
@@ -557,6 +557,10 @@ section.map-sec {
   section.hero-info .row .col-lg-4 {
     margin-bottom: 35px;
   }
+
+  .about-content h2 {
+    margin-top: 40px;
+  }
 }
 
 @media screen and (max-width: 768px) {}
@@ -584,13 +588,28 @@ section.map-sec {
   section.about-sec .abt-txt p {
     line-height: 22px;
   }
+
   section.about-sec h5 {
     font-size: 19px;
-}
-section.about-sec .container {
-  padding-right: 20px;
-  padding-left: 30px;
-}
+  }
+
+  section.about-sec .container {
+    padding-right: 20px;
+    padding-left: 30px;
+  }
+
+  .inner-hero .container .row h1 {
+    font-size: 48px !important;
+  }
+
+  .about-content{
+    padding: 40px 20px;
+  }
+
+  .about-content .col-lg-6{
+    padding: 0 !important;
+  }
+
 }
 
 @media screen and (max-width: 414px) {}
